hphp/test/zend/good/tests/classes/property_override_protected_private.php.expectf

Fatal error: Access level to B::$p() must be protected (as in class A) or weaker in %s/property_override_protected_private.php on line 11
